Rounded textarea on mobiles possible fix

--- a/src/styles/EmailPanel.scss
+++ b/src/styles/EmailPanel.scss
@@ -56,6 +56,7 @@
       width: calc(100% - 20px);
       padding: 5px;
       border: none;
+      border-radius: 0;
       height: 200px;
       margin-bottom: 20px;
       background-color: $secondary-color;
